adding relays get request
