# internal/services/server.go
@@ -10,6 +10,7 @@ import (
 	"gitlab.com/distributed_lab/logan/v3/errors"
 	"gitlab.com/rarimo/relayer-svc/docs"
 	"gitlab.com/rarimo/relayer-svc/internal/config"
+	"gitlab.com/rarimo/relayer-svc/internal/data/pg"
 	"gitlab.com/rarimo/relayer-svc/internal/services/relayer"
 	"gitlab.com/rarimo/relayer-svc/internal/types"
 	"google.golang.org/grpc/codes"
@@ -21,6 +22,7 @@ type ServerImpl struct {
 	log      *logan.Entry
 	listener net.Listener
 	relayer  *relayer.Service
+	storage  *pg.Storage
 }
 
 func NewServer(cfg config.Config) *ServerImpl {
@@ -28,6 +30,7 @@ func NewServer(cfg config.Config) *ServerImpl {
 		log:      cfg.Log(),
 		listener: cfg.Listener(),
 		relayer:  relayer.NewService(cfg),
+		storage:  pg.New(cfg.DB()),
 	}
 }
 
@@ -54,6 +57,11 @@ func (s *ServerImpl) Relay(ctx context.Context, req *types.MsgRelayRequest) (*ty
 		switch errors.Cause(err) {
 		case relayer.ErrEntryNotFound, relayer.ErrChainNotFound:
 			return nil, status.Errorf(codes.NotFound, err.Error())
+		case relayer.ErrAlreadySubmitted:
+			return nil, status.Errorf(
+				codes.InvalidArgument,
+				"can not resubmit state transition tx for state: %s on chain: %s", req.State, req.Chain,
+			)
 		default:
 			s.log.WithError(err).Error("got internal error while processing relay request")
 			return nil, status.Errorf(codes.Internal, "Internal error")
@@ -61,4 +69,28 @@ func (s *ServerImpl) Relay(ctx context.Context, req *types.MsgRelayRequest) (*ty
 	}
 
 	return &types.MsgRelayResponse{Tx: tx}, nil
+}
+
+func (s *ServerImpl) Relays(ctx context.Context, req *types.MsgRelaysRequest) (*types.MsgRelaysResponse, error) {
+	relays, err := s.relayer.Relays(ctx, req.State)
+	if err != nil {
+		switch errors.Cause(err) {
+		case relayer.ErrEntryNotFound:
+			return nil, status.Errorf(codes.NotFound, err.Error())
+		default:
+			s.log.WithError(err).Error("got internal error while processing relay request")
+			return nil, status.Errorf(codes.Internal, "Internal error")
+		}
+	}
+
+	resp := &types.MsgRelaysResponse{Relays: make([]*types.Transition, 0, len(relays))}
+
+	for _, r := range relays {
+		resp.Relays = append(resp.Relays, &types.Transition{
+			Chain: r.Chain,
+			Tx:    r.Tx,
+		})
+	}
+
+	return resp, nil
 }
